--- a/clientHomepage.html
+++ b/clientHomepage.html
@@ -11,7 +11,7 @@
     <body>
         <header id="topBar">
             <a href="clientHomepage.html"><img class="logo" src="images/lightBeigeLogo.png" alt="logo" ></a>
-            <a id="logout" href="index.html">Log-out</a>
+            <a id="logout" href="logout.php">Log-out</a>
         </header>
         
         <main>
