--- a/designerHomePage.html
+++ b/designerHomePage.html
@@ -15,7 +15,7 @@
 
         <header id="topBar">
             <a href="designerHomePage.html"><img class="logo" alt="logo" src="images/lightBeigeLogo.png" ></a>
-            <a id="logout" href="index.html">Log-out</a>
+            <a id="logout" href="logout.php">Log-out</a>
         </header>
         
         <main>
