--- a/clientHomepage.html
+++ b/clientHomepage.html
@@ -60,8 +60,8 @@
                             <button id="prevBtn" onclick="prevSlide()">&lt</button>
                             <button id="nextBtn" onclick="nextSlide()">&gt</button>
                         </div>
-                        <a href="portfolio.html"><img src="images/OIG.jpg" alt="logo" class="profile-pic"></a>
-                        <a href="portfolio.html"><h2>Elevate Interiors</h2></a>
+                        <a href="portfolio.php"><img src="images/OIG.jpg" alt="logo" class="profile-pic"></a>
+                        <a href="portfolio.php"><h2>Elevate Interiors</h2></a>
                         <p class="specialty"><strong>Design preference:</strong> <span class="preference">Traditional</span> <span class="preference">Modern</span></p>
                         <a href="requestConsultation.html" class="consult">Request Design Consultation</a>
                     </div>
